mik-sdk-macros/tests/ui/derive/query_on_tuple_struct.rs
use mik_sdk_macros::Query;

// Error: Query derive only supports structs with named fields
#[derive(Query)]
struct QueryTuple(String);

fn main() {}
